--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -381,8 +381,33 @@ export default defineConfig({
   esbuild: false,
   plugins: [
     react(),
-    typescript()
-  ]
+    typescript(),
+  ],
+});
+```
+
+By the way, if you're composing monorepo, and need to import some external TypeScript files from the other package of the monorepo, you've to configure the `vite.config.ts` a little bit different. When declaring `typescript` plugin, you've to specify `include` and `excluude` options like below.
+
+```typescript filename="vite.config.ts" copy showLineNumbers
+import { defineConfig } from 'vite'
+import react from '@vitejs/plugin-react'
+import typescript from "rollup-plugin-typescript2";
+
+// https://vitejs.dev/config/
+export default defineConfig({
+  esbuild: false,
+  plugins: [
+    react(),
+    typescript({
+      // WHEN MONOREPO
+      include: [
+        "./**/*.ts+(|x)",
+        "../../core/**/*.ts+(|x)",
+        "../../util/**/*.ts+(|x)",
+      ],
+      exclude: ["../../node_modules"],
+    }),
+  ],
 });
 ```
 
