Fix highlight on code
Add missing highlights on line 5.

--- a/website/pages/docs/utilization/prisma.mdx
+++ b/website/pages/docs/utilization/prisma.mdx
@@ -6,7 +6,7 @@ import { Tabs, Tab } from 'nextra-theme-docs'
     <code>.prisma/client</code>,
 ]}>
     <Tab>
-```prisma copy filename="prisma.schema" showLineNumbers {2, 10, 11, 14-15}
+```prisma copy filename="prisma.schema" showLineNumbers {2, 5, 10, 11, 14-15}
 model bbs_articles {
     id String @id @db.Uuid /// @format uuid
     created_at DateTime @db.Timestamptz
