Fix invalid decorator-use in tags.mdx

--- a/website/pages/docs/validators/tags.mdx
+++ b/website/pages/docs/validators/tags.mdx
@@ -383,7 +383,7 @@ interface CustomTag {
     string: string;
 
     /**
-     * @format /^[a-z]+$/
+     * @Pattern /^[a-z]+$/
      */
     pattern: string;
 
