Fix typo in pure.mdx: "famouse"
Thanks for the lib.

--- a/website/pages/docs/pure.mdx
+++ b/website/pages/docs/pure.mdx
@@ -8,7 +8,7 @@ typia.assert<IBbsArticle>(article);
 
 `typia` needs only one line with pure TypeScript type.
 
-You know what? Every other validator libraries need extra schema definition, that is different with pure TypeScript type. For an example, `class-validator` is the most famouse validator due to used in `NestJS`. However, `NestJS` and `class-validator` force you to define triple duplicated DTO schema.
+You know what? Every other validator libraries need extra schema definition, that is different with pure TypeScript type. For an example, `class-validator` is the most famous validator due to used in `NestJS`. However, `NestJS` and `class-validator` force you to define triple duplicated DTO schema.
 
   1. TypeScript Type
   2. `class-validator` decorators
