Emend webpack setup section - enhance special block

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -458,7 +458,7 @@ When you're using `webpack` as a bundler, you can still utilize the [transformat
 
 Just install `ts-loader` as well as `webpack`, and configure `webpack.config.js` file like below.
 
-```javascript filename="webpack.config.js" copy showLineNumbers
+```javascript filename="webpack.config.js" copy showLineNumbers {20-24}
 const path = require("path");
 const nodeExternals = require('webpack-node-externals');
  
