--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -92,4 +92,4 @@ Thanks for your support.
 
 Your donation would encourage `typia` development.
 
-[![Backers](https://opencollective.com/typia/backers.svg?width=1000)](https://opencollective.com/typia)
+[![Sponsors](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
