--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,91 +1,20 @@
-import { Tabs, Tab } from 'nextra-theme-docs'
-import Alert from '@mui/material/Alert';
-import Stack from '@mui/material/Stack';
+import HomeLayout from "../src/components/home/HomeLayout";
+import HomeHeroMovie from "../src/movies/home/HomeHeroMovie";
+import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
-<meta httpEquiv="refresh" content="0; url=/docs" />
+<HomeLayout>
+  <HomeHeroMovie />
+</HomeLayout>
 
-## Outline
 
-![Typia Logo](/logo.png)
 
-<span style={{ display: "flex", flexDirection: "row" }}>
-{[
-    [
-        "MIT License",
-        "https://img.shields.io/badge/license-MIT-blue.svg",
-        "https://github.com/samchon/typia/blob/master/LICENSE",
-    ],
-    [
-        "NPM Version",
-        "https://img.shields.io/npm/v/typia.svg",
-        "https://www.npmjs.com/package/typia",
-    ],
-    [
-        "NPM Downloads",
-        "https://img.shields.io/npm/dm/typia.svg",
-        "https://www.npmjs.com/package/typia",
-    ],
-    [
-        "Build Status",
-        "https://github.com/samchon/typia/workflows/build/badge.svg",
-        "https://github.com/samchon/typia/actions?query=workflow%3Abuild",
-    ],
-    [
-        "Guide Documents",
-        "https://img.shields.io/badge/guide-documents-forestgreen",
-        "https://typia.io/docs/",
-    ]
-].map(([alt, image, url]) => (
-    <a href={url} style={{ marginTop: "30px", marginRight: "6px" }}>
-        <img src={image} alt={alt} />
-    </a>
-))}
-</span>
 
-```typescript
-// RUNTIME VALIDATORS
-export function is<T>(input: unknown): input is T; // returns boolean
-export function assert<T>(input: unknown): T; // throws TypeGuardError
-export function assertGuard<T>(input: unknown): asserts input is T;
-export function validate<T>(input: unknown): IValidation<T>; // detailed
+## Key Features
 
-// JSON FUNCTIONS
-export namespace json {
-    export function application<T>(): IJsonApplication; // JSON schema
-    export function assertParse<T>(input: string): T; // type safe parser
-    export function assertStringify<T>(input: T): string; // safe and faster
-}
+<HomeLayout>
+  <HomeStrengthMovie />
+</HomeLayout>
 
-// PROTOCOL BUFFER
-export namespace protobuf {
-    export function message<T>(): string; // Protocol Buffer message
-    export function assertDecode<T>(buffer: Uint8Array): T; // safe decoder
-    export function assertEncode<T>(input: T): Uint8Array; // safe encoder
-}
-
-// RANDOM GENERATOR
-export function random<T>(g?: Partial<IRandomGenerator>): T;
-```
-
-Typia is a transformer library supporting below features:
-
-  - Super-fast Runtime Validators
-  - Enhanced JSON functions
-  - Protocol Buffer encoder and decoder
-  - Random data generator
-
-<br/>
-<Stack spacing={1}>
-    <Alert severity="warning">
-        Only **one line** required, with pure TypeScript type
-    </Alert>
-    <Alert severity="success">
-        Runtime validator is **20,000x** faster than `class-validator`
-    </Alert>
-    <Alert severity="info">
-        JSON serialization is **200x faster** than `class-transformer`
-    </Alert>
-</Stack>
 
 
 
@@ -94,4 +23,4 @@ Thanks for your support.
 
 Your donation would encourage `typia` development.
 
-[![Backers](https://opencollective.com/typia/backers.svg?width=1000)](https://opencollective.com/typia)
+[![Sponsors](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
