fix: enhance doc design

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -19,8 +19,10 @@ pnpm typia setup --manager pnpm
 ```
     </Tab>
     <Tab>
+    <Alert severity="warning">
+        Yarn berry is not supported.
+    </Alert>
 ```bash filename="Terminal" showLineNumbers copy
-# YARN BERRY IS NOT SUPPORTED
 yarn add typia
 yarn typia setup --manager yarn
 ```
