--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -9,9 +9,7 @@ import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
 
 
-## Key Features
-
-<HomeLayout>
+<HomeLayout id="home-strength">
   <HomeStrengthMovie />
 </HomeLayout>
 
