Restore main page

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -9,7 +9,9 @@ import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
 
 
-<HomeLayout id="home-strength">
+## Key Features
+
+<HomeLayout>
   <HomeStrengthMovie />
 </HomeLayout>
 
